<resources>
    <!--pantalla de registro-->
    <string name="app_name">Pantalla de Login</string>
    <string name="tx_ingresenombre">Ingrese su Nombre:</string>
    <string name="tx_ingreseapellido">Ingrese su Apellido:</string>
    <string name="tx_ingresecorreo">Ingrese Su Correo Electronico:</string>
    <string name="tx_ingresetelefono">Ingrese Su Numero Telefonico:</string>
    <string name="tx_ingreseusuario">Ingrese Su Usuario:</string>
    <string name="tx_ingresecontraseña">Ingrese Su Contraseña:</string>
    <string name="bt_ingresar">Ingresar</string>
    <string name="ht_ejemploNombre">Ingrese aqui su nombre</string>
    <string name="ht_ejemploApellido">Ingrese aqui su apellido</string>
    <string name="ht_ejemplousuario">abc123</string>
    <string name="ht_ejemplocontraseña">12345678</string>
    <string name="ht_ejemploTelefono">Ingrese aqui su Numero Telefonico</string>
    <string name="ht_ejemploCorreo">Ingrese aqui su Correo Electronico</string>
    <!--pantalla de registro fin-->

    <!--pantalla Login-->
    <string name="tx_usuario">Ingrese Su Usuario </string>
    <string name="tx_contraseña">Ingrese Su Contraseña</string>
    <string name="tx_login">   LOGIN</string>
    <string name="bt_loguear">Ingresar !!!</string>
    <string name="bt_recuperar">Recuperar contraseña </string>

    <!--pantalla Login fin-->

    <!--pantalla registro de igresos-->
    <string name="tx_R_ingresos">Registrar Nuevo Ingreso </string>
    <string name="tx_ingresos">Forma de Capitalizacion</string>
    <string name="tx_formapago">Cantidad Inicial (Monto)</string>
    <string name="tx_describcion">Descripcion</string>
    <string name="bt_capitalizar">ACEPTAR !!!</string>
    <string name="tx_explicacion1">Selecciona la forma como tienes representado este ingreso</string>
    <string name="tx_explicacion2">Ingresa la cantidad de dinero con la que inicias tu contabilidad personal</string>
    <string name="tx_explicacion3">Registro de Ingresos</string>
    <string name="tx_explicacion4">Registro de Inicial</string>
    <!--pantalla registro de igresos-->
    <string name="bt_aceptaringreso">Aceptar</string>
    <string name="bt_regresaringreso">Regresar</string>


    <!--pantalla de menu-->
    <string name="title_activity_menu1">menu1</string>
    <string name="tx_menuopciones">Menu De Opciones</string>
    <string name="bt_crearnuevoi">Crear Nuevo Registro De Ingreso</string>
    <string name="ht_CNregistroi">Al seleccionar esta opcion podras capitalizar tus financias(introducir dinero a tu contabilidad) </string>
    <string name="bt_crearnuevoe">Crear Nuevo Registro De Egreso</string>
    <string name="ht_CNregistroe">Al seleccionar esta opcion podras registrar tus gastos e inverciones de manera sencilla y clara </string>
    <string name="bt_crearnuevot">Crear Nueva transferencia de efectivo</string>
    <string name="ht_CNregistrot">Al seleccionar esta opcion podras cambiar el modo como se tiene represento su capital(por ejemplo de tarjeta debito a efectivo) </string>
    <!--pantalla registro de egresos-->
    <string name="tx_R_egresos">Registrar Nuevo Egreso </string>
    <string name="tx_egresos">Forma de Pago</string>
    <string name="tx_explicacion5">Selecciona la forma como se realiza el pago (cuenta de la que se debita)</string>
    <string name="tx_formapago2">Cantidad  (Monto)</string>
    <string name="tx_explicacion6">Ingresa la cantidad de dinero pagada</string>
    <string name="tx_concepto">concepto</string>
    <string name="tx_area">Area</string>
    <string name="tx_servicio">Elemento o Servicio</string>
    <string name="tx_otro">Otro</string>
    <string name="bt_registraregreso">Registrar Egreso</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="ht_ejemplonoesta">si no esta</string>

    <!--pantalla de transferencia-->

    <string name="tx_transferencia">Crear Transferncia</string>
    <string name="tx_Donante">Seleccionar Registro De Ingreso Donante</string>
    <string name="tx_MDonante">Monto Donante</string>
    <string name="tx_Mtrasferir">Ingrese elmonto a transferir</string>
    <string name="tx_Receptor">Seleccionar Registro De Ingreso Receptor</string>
    <string name="tx_MReceptor">Monto Receptor</string>
    <string name="tx_explicacion7">Montor Despues de las Transferncias</string>
    <string name="bt_transferir">Transferir</string>
    <string name="bt_Aceptar3">Aceptar</string>

</resources>
