<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/tx_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textColorLink="?android:attr/colorActivatedHighlight"
        android:textCursorDrawable="@android:color/holo_green_dark"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="66dp"
        android:gravity="center"
        android:textSize="36sp"
        android:fontFamily="cursive"
        android:textStyle="normal|bold"
        android:textAllCaps="false" />

    <TextView
        android:text="@string/tx_usuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/textView7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ht_ejemplousuario"
        android:ems="10"
        android:id="@+id/ET_num1"
        android:gravity="center_vertical|center"
        android:textSize="24sp"
        android:fontFamily="serif-monospace"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp" />

    <TextView
        android:text="@string/tx_contraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/ET_num2"
        android:hint="@string/ht_ejemplocontraseña"
        android:gravity="center_vertical|center"
        android:textSize="24sp"
        android:fontFamily="serif-monospace"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/bt_loguear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:gravity="center"
        android:textSize="14sp"
        android:elevation="0dp"
        android:layout_marginTop="51dp"
        android:layout_below="@+id/ET_num2"
        android:layout_alignLeft="@+id/ET_num1"
        android:layout_alignStart="@+id/ET_num1" />

    <Button
        android:text="@string/bt_recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:layout_alignBottom="@+id/button7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
